--- a/Horus/Firmware-Horus.ioc
+++ b/Horus/Firmware-Horus.ioc
@@ -1,9 +1,23 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_15
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_8
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_9
+ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_TEMPSENSOR
+ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV8
+ADC1.ContinuousConvMode=ENABLE
+ADC1.DMAContinuousRequests=ENABLE
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,ContinuousConvMode,NbrOfConversion,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,InjNumberOfConversion,DMAContinuousRequests
+ADC1.InjNumberOfConversion=0
+ADC1.NbrOfConversion=4
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.Rank-1\#ChannelRegularConversion=2
+ADC1.Rank-2\#ChannelRegularConversion=3
+ADC1.Rank-3\#ChannelRegularConversion=4
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
 ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
@@ -13,7 +27,7 @@ Dma.ADC1.2.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.ADC1.2.Instance=DMA2_Stream0
 Dma.ADC1.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 Dma.ADC1.2.MemInc=DMA_MINC_ENABLE
-Dma.ADC1.2.Mode=DMA_NORMAL
+Dma.ADC1.2.Mode=DMA_CIRCULAR
 Dma.ADC1.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.ADC1.2.PeriphInc=DMA_PINC_DISABLE
 Dma.ADC1.2.Priority=DMA_PRIORITY_LOW
@@ -137,18 +151,19 @@ Mcu.Pin51=PB6
 Mcu.Pin52=PB7
 Mcu.Pin53=PB8
 Mcu.Pin54=PB9
-Mcu.Pin55=VP_FATFS_VS_SDIO
-Mcu.Pin56=VP_RTC_VS_RTC_Activate
-Mcu.Pin57=VP_RTC_VS_RTC_Calendar
-Mcu.Pin58=VP_SYS_VS_Systick
-Mcu.Pin59=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin55=VP_ADC1_TempSens_Input
+Mcu.Pin56=VP_FATFS_VS_SDIO
+Mcu.Pin57=VP_RTC_VS_RTC_Activate
+Mcu.Pin58=VP_RTC_VS_RTC_Calendar
+Mcu.Pin59=VP_SYS_VS_Systick
 Mcu.Pin6=NRST
-Mcu.Pin60=VP_TIM10_VS_ClockSourceINT
-Mcu.Pin61=VP_TIM11_VS_ClockSourceINT
+Mcu.Pin60=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin61=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin62=VP_TIM11_VS_ClockSourceINT
 Mcu.Pin7=PC0
 Mcu.Pin8=PC1
 Mcu.Pin9=PC2
-Mcu.PinsNb=62
+Mcu.PinsNb=63
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RCTx
@@ -164,7 +179,7 @@ NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SDIO_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -416,7 +431,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_SDIO_SD_Init-SDIO-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_USART6_UART_Init-USART6-false-HAL-true,10-MX_FATFS_Init-FATFS-false-HAL-false,11-MX_ADC1_Init-ADC1-false-HAL-true,12-MX_TIM3_Init-TIM3-false-HAL-true,13-MX_TIM10_Init-TIM10-false-HAL-true,14-MX_TIM11_Init-TIM11-false-HAL-true,15-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_SDIO_SD_Init-SDIO-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_USART6_UART_Init-USART6-false-HAL-true,10-MX_FATFS_Init-FATFS-false-HAL-false,11-MX_ADC1_Init-ADC1-false-HAL-true,12-MX_TIM3_Init-TIM3-false-HAL-true,13-MX_TIM10_Init-TIM10-false-HAL-true,14-MX_TIM11_Init-TIM11-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -425,14 +440,14 @@ RCC.APB1TimFreq_Value=84000000
 RCC.APB2Freq_Value=84000000
 RCC.APB2TimFreq_Value=84000000
 RCC.CortexFreq_Value=84000000
-RCC.EnbaleCSS=true
 RCC.FCLKCortexFreq_Value=84000000
 RCC.HCLKFreq_Value=84000000
 RCC.HSE_VALUE=16000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EnbaleCSS,FCLKCortexFreq_Value,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLP,PLLQ,PLLQCLKFreq_Value,PLLSourceVirtual,RCC_RTC_Clock_Source,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLP,PLLQ,PLLQCLKFreq_Value,PLLSourceVirtual,RCC_MCO1Source,RCC_RTC_Clock_Source,RCC_RTC_Clock_SourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSI_VALUE=32000
+RCC.MCO1PinFreq_Value=16000000
 RCC.MCO2PinFreq_Value=84000000
 RCC.PLLCLKFreq_Value=84000000
 RCC.PLLM=8
@@ -441,7 +456,9 @@ RCC.PLLP=RCC_PLLP_DIV4
 RCC.PLLQ=7
 RCC.PLLQCLKFreq_Value=48000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.RCC_MCO1Source=RCC_MCO1SOURCE_HSE
 RCC.RCC_RTC_Clock_Source=RCC_RTCCLKSOURCE_LSE
+RCC.RCC_RTC_Clock_SourceVirtual=RCC_RTCCLKSOURCE_LSE
 RCC.RTCFreq_Value=32768
 RCC.RTCHSEDivFreq_Value=8000000
 RCC.SYSCLKFreq_VALUE=84000000
@@ -482,6 +499,8 @@ USART6.IPParameters=VirtualMode
 USART6.VirtualMode=VM_ASYNC
 VBAT.Locked=true
 VCAP1.Locked=true
+VP_ADC1_TempSens_Input.Mode=IN-TempSens
+VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
 VP_FATFS_VS_SDIO.Mode=SDIO
 VP_FATFS_VS_SDIO.Signal=FATFS_VS_SDIO
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
